--- a/gaya.css
+++ b/gaya.css
@@ -105,14 +105,33 @@ h1 {
 }
 
 #scoreZone {
-  width: auto;
+  position: relative;
+  margin: auto;
+  width: 800px;
   height: 50px;
-  background-color: rgba(0, 0, 0, 0.336);
+  background-color: rgba(0, 0, 0, 0.527);
+  margin-bottom: 5px;
 }
 
-.score {
+#tabScore {
+  position: relative;
+  float: left;
+  height: 100%;
+  width: 50%;
+}
+
+#tabDarah {
+  background-image: url(src/darah-bar/heath-bar-1.png);
+  background-position: right;
+  height: 100%;
+  background-repeat: no-repeat;
+}
+
+.score,
+.level {
+  margin-left: 10px;
+  margin-top: 5px;
   font-weight: bold;
-  margin: 10px;
   font-size: 20px;
   position: absolute;
   -webkit-text-stroke-width: 0, 5px;
